Revert "add react-json-forms"
This reverts commit c639362d
